# kprespatch

./: .gitignore  CMakeLists.txt  checkkingpinfile.c  checkkpresolution.c  checkmd5file.c  cleanup.bat  create-solution-vs2019-win32.bat  create-solution-vs2019-x64.bat  create-solution-vs2022-win32.bat  create-solution-vs2022-x64.bat  hexutils.c  hexutils.h  info.txt  kprespatch.ppj  kprespatch.ppx  kprespatch.sln  kprespatch.tag  kprespatch.vcxproj  main.c  main.h  main.rc  md5.c  patchkingpinfile.c  patchkpresolution.c  readme.txt  resource.h
src/: CMakeLists.txt  checkkpresolution.c  checkmd5file.c  hexutils.c  main.c  main.h  main.rc  md5.c  md5.h  patchkingpinfile.c  patchkpresolution.c  resource.h
tools/CMake/toolchains/: linux-clang.cmake  linux-gcc.cmake  windows-msvc.cmake
